--- a/src/resources/convertor_page_model_v2.html
+++ b/src/resources/convertor_page_model_v2.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="loading-div">
-        <div class="container"  style="padding-left: 40vw;">
+        <div class="container"  style="margin-left: calc(50vw - 5px);">
           <div class="ispinner ispinner-large">
             <div class="ispinner-blade"></div>
             <div class="ispinner-blade"></div>
@@ -36,7 +36,7 @@
           </div>
         </div>
         <!-- <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;color: #333;"></i> -->
-        <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">模型信息加载中...</font></span>
+        <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);margin-top: -70px;display: block;"><font style="color: #333;font-weight: bolder;">模型信息加载中...</font></span>
       </div>
 
         <div id="main_panel" style="width: 100%;height: 100%;overflow: auto;white-space: nowrap;">
