--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -9,7 +9,7 @@
 <body class="dark-mode" style="height: 100%;width: 100%;white-space: nowrap;overflow: auto;">
 
   <div class="loading-div">
-    <div class="container"  style="padding-left: 40vw;">
+    <div class="container"  style="margin-left: calc(50vw - 5px);">
       <div class="ispinner ispinner-large">
         <div class="ispinner-blade"></div>
         <div class="ispinner-blade"></div>
@@ -22,29 +22,29 @@
       </div>
     </div>
     <!-- <i class="fa fa-spinner fa-pulse fa-3x fa-fw" style="display: block;margin-left: 50vw;color: #333;"></i> -->
-    <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);display: block;"><font style="color: #333;font-weight: bolder;">数据信息加载中...</font></span>
+    <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);margin-top: -70px;display: block;"><font style="color: #333;font-weight: bolder;">数据信息加载中...</font></span>
   </div>
 
     <div style="height: 400px;">
         <!-- SNN神经元信息 -->
-        <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 400px;width: 500px;">
+        <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 400px;width: 750px;">
             <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
               font-size: 20px;
               color: #333333;
               letter-spacing: 1.14px;">脉冲神经网络神经元组信息</font></div>
-            <table id="snn_neurons_table" style="margin-left:10px;margin-left: 20px;border: solid 3px #D6D6D6;width: 440px;">
+            <table id="snn_neurons_table" style="margin-left:10px;margin-left: 20px;border: solid 3px #D6D6D6;width: 600px;">
                 <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                 <thead>
                   <tr style="margin-top: 15px;border: solid 2px #D6D6D6;color: #333;">
                     <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                     font-size: 16px;
-                    color: #666666;padding-top: 12px; padding-bottom: 12px;">layer编号</td>
-                    <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
+                    color: #666666;padding-top: 12px; padding-bottom: 12px;">layer</td>
+                    <!-- <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                     font-size: 16px;
                     color: #666666;padding-top: 12px; padding-bottom: 12px;">神经元个数</td>
                     <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                     font-size: 16px;
-                    color: #666666;padding-top: 12px; padding-bottom: 12px;">求解方法</td>
+                    color: #666666;padding-top: 12px; padding-bottom: 12px;">求解方法</td> -->
                     <td style="width: 100px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                     font-size: 16px;
                     color: #666666;padding-top: 12px; padding-bottom: 12px;">电压阈值</td>
@@ -54,18 +54,18 @@
             </table>
         </div>
 
-        <div style="display: inline-block;background: rgba(238,238,238,0.4);height: 400px;width: 500px;">
+        <div style="display: inline-block;background: rgba(238,238,238,0.4);height: 400px;width: 750px;">
           <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
             font-size: 20px;
             color: #333333;
             letter-spacing: 1.14px;">层连接权重统计</font></div>
-          <table id="snn_layer_wt_table" style="border: solid 3px #D6D6D6;width: 380px;margin-left: 60px;">
+          <table id="snn_layer_wt_table" style="border: solid 3px #D6D6D6;width: 600px;margin-left: 60px;">
             <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
             <thead>
               <tr style="margin-top: 15px;border: solid 2px #D6D6D6;color: #333;">
                 <td style="width: 80px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                 font-size: 16px;
-                color: #666666;padding-top: 12px; padding-bottom: 12px;">突触连接编号</td>
+                color: #666666;padding-top: 12px; padding-bottom: 12px;">突触连接</td>
                 <td style="width: 80px;text-align: center;border: solid 2px #D6D6D6;background: #EEEEEE;font-family: SourceHanSansCN-Medium;
                 font-size: 16px;
                 color: #666666;padding-top: 12px; padding-bottom: 12px;">权重均值</td>
@@ -77,7 +77,7 @@
           </table>
         </div>
 
-        <div style="height: 400px;margin-top: 20px;display: inline-block;background: rgba(238,238,238,0.4);width: 500px;">
+        <!-- <div style="height: 400px;margin-top: 20px;display: inline-block;background: rgba(238,238,238,0.4);width: 500px;">
             <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
               font-size: 20px;
               color: #333333;
@@ -99,7 +99,7 @@
                   <!-- 动态加载 -->
                 </thead>
             </table>
-        </div>
+        </div> -->
     </div>
     <div style="height: 460px;margin-top: 30px;">
         <!--权重分布图-->
@@ -227,50 +227,57 @@ const vscode = acquireVsCodeApi();
                       line.style = "margin-top: 15px;border: solid 3px #D6D6D6;color: #333;"
                       var col_1 = document.createElement("td");
                       col_1.style = "text-align:center; padding-right:15px; font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
-                      col_1.innerText = neurons_info[i].idx;
+                      if (i == 0) {
+                        col_1.innerText = "input";
+                      } else if (i == neurons_info.length - 1) {
+                        col_1.innerText = "out";
+                      } else {
+                        col_1.innerText = "layer_"+neurons_info[i].idx;
+                      }
+                      // col_1.innerText = neurons_info[i].idx;
 
-                      var col_2 = document.createElement("td");
-                      col_2.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
-                      col_2.innerText = neurons_info[i].neuron_count;
+                      // var col_2 = document.createElement("td");
+                      // col_2.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
+                      // col_2.innerText = neurons_info[i].neuron_count;
 
-                      var col_3 = document.createElement("td");
-                      col_3.style = "border: solid 3px #D6D6D6;padding-left:10px;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
-                      col_3.innerText = neurons_info[i].method;
+                      // var col_3 = document.createElement("td");
+                      // col_3.style = "border: solid 3px #D6D6D6;padding-left:10px;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
+                      // col_3.innerText = neurons_info[i].method;
 
                       var col_4 = document.createElement("td");
-                      col_4.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
+                      col_4.style = "border: solid 3px #D6D6D6;text-align:center; padding-right:15px;;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
                       col_4.innerText = neurons_info[i].vthresh;
 
                       line.appendChild(col_1);
-                      line.appendChild(col_2);
-                      line.appendChild(col_3);
+                      // line.appendChild(col_2);
+                      // line.appendChild(col_3);
                       line.appendChild(col_4);
 
                       neurons_table.appendChild(line);
                   }
                   // 构建突触表格
-                  var synaps_info = infos.layer_conns;
-                  var synaps_table = document.getElementById("layer_conns_table");
-                  for(var i=0;i<synaps_info.length;++i){
-                      var line = document.createElement("tr");
-                      line.style = "margin-top: 15px; border: solid 3px #D6D6D6; color:#333;";
-                      var col_1 = document.createElement("td");
-                      col_1.style = "text-align:center; padding-right:15px;border: solid 3px #D6D6D6;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
-                      col_1.innerText = synaps_info[i].idx + "-"+(synaps_info[i].idx+1);
+                  // var synaps_info = infos.layer_conns;
+                  // var synaps_table = document.getElementById("layer_conns_table");
+                  // for(var i=0;i<synaps_info.length;++i){
+                  //     var line = document.createElement("tr");
+                  //     line.style = "margin-top: 15px; border: solid 3px #D6D6D6; color:#333;";
+                  //     var col_1 = document.createElement("td");
+                  //     col_1.style = "text-align:center; padding-right:15px;border: solid 3px #D6D6D6;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
+                  //     col_1.innerText = synaps_info[i].idx + "-"+(synaps_info[i].idx+1);
 
-                      var col_2 = document.createElement("td");
-                      col_2.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
-                      col_2.innerText = synaps_info[i].ratio;
+                  //     var col_2 = document.createElement("td");
+                  //     col_2.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
+                  //     col_2.innerText = synaps_info[i].ratio;
 
-                      var col_3 = document.createElement("td");
-                      col_3.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
-                      col_3.innerText = synaps_info[i].avg_conn;
+                  //     var col_3 = document.createElement("td");
+                  //     col_3.style = "border: solid 3px #D6D6D6;text-align:right; padding-right:15px;font-family: ArialMT;font-size: 14px;color: #333333;padding-top: 12px; padding-bottom: 12px;";
+                  //     col_3.innerText = synaps_info[i].avg_conn;
 
-                      line.appendChild(col_1);
-                      line.appendChild(col_2);
-                      line.appendChild(col_3);
-                      synaps_table.appendChild(line);
-                  }
+                  //     line.appendChild(col_1);
+                  //     line.appendChild(col_2);
+                  //     line.appendChild(col_3);
+                  //     synaps_table.appendChild(line);
+                  // }
 
                   // 绘制权重分布图
                   for(var i=0;i<infos.layers_weights.wt_count.length;++i){
@@ -307,7 +314,14 @@ const vscode = acquireVsCodeApi();
                     td_id.style.paddingRight = "15px";
                     td_id.style.paddingTop = "12px";
                     td_id.style.paddingBottom = "12px";
-                    td_id.innerText = ""+i+"-"+(i+1);
+                    // td_id.innerText = ""+i+"-"+(i+1);
+                    if (i == 0) {
+                      td_id.innerText = "input ---> "+"layer_"+(i+1);
+                    } else if (i == infos.record_layers_wt_info.record_wts_avg.length - 1) {
+                      td_id.innerText = "layer_"+i+" ---> "+"out";
+                    } else {
+                      td_id.innerText = "layer_"+(i)+" ---> layer_"+(i+1);
+                    }
                     table_line.appendChild(td_id);
 
                     let td_avg = document.createElement("td");
@@ -387,26 +401,54 @@ const vscode = acquireVsCodeApi();
                         }
                     }
                 },
-                xAxis: {
-                    type: 'category',
-                    data: label_names,
-                    name:"权重",
-                    nameTextStyle:{
-                      color:"#999999",
-                      fontFamily: 'SourceHanSansCN-Normal',
-                      fontSize: '14px',
-                    },
-                    axisLabel:{
-                      textStyle:{
-                        color:"#999999"
-                      },
-                      fontFamily: 'SourceHanSansCN-Normal',
-                      fontSize: '14px',
-                   }
+                legend: {
+                  data: ['浮点数权重', "定点数权重"],
+                  textStyle: {
+                    color: '#999'
+                  }
                 },
-                yAxis: {
+                xAxis: [
+                  {
+                      type: 'category',
+                      data: label_names,
+                      name:"浮点权重",
+                      nameTextStyle:{
+                        color:"#999999",
+                        fontFamily: 'SourceHanSansCN-Normal',
+                        fontSize: '14px',
+                      },
+                      axisLabel:{
+                        textStyle:{
+                          color:"#999999"
+                        },
+                        fontFamily: 'SourceHanSansCN-Normal',
+                        fontSize: '14px',
+                    },
+                    position: "top"
+                  },
+                  {
+                      type: 'category',
+                      data: label_names,
+                      name:"定点权重",
+                      nameTextStyle:{
+                        color:"#999999",
+                        fontFamily: 'SourceHanSansCN-Normal',
+                        fontSize: '14px',
+                      },
+                      axisLabel:{
+                        textStyle:{
+                          color:"#999999"
+                        },
+                        fontFamily: 'SourceHanSansCN-Normal',
+                        fontSize: '14px',
+                    },
+                    position: 'bottom'
+                  }
+                ],
+                yAxis: [
+                 {
                     type: 'value',
-                    name:"连接个数(log_10)",
+                    name:"浮点个数(10^n)",
                     nameTextStyle:{
                       color:"#999999",
                       fontFamily: 'SourceHanSansCN-Normal',
@@ -420,12 +462,44 @@ const vscode = acquireVsCodeApi();
                         },
                         fontFamily: 'SourceHanSansCN-Normal',
                         fontSize: '14px',
-                    }
-                },
+                    },
+                    inverse:true
+                  },
+                  {
+                    type: 'value',
+                    name:"定点个数(10^n)",
+                    nameTextStyle:{
+                      color:"#999999",
+                      fontFamily: 'SourceHanSansCN-Normal',
+                      fontSize: '14px',
+                    },
+                    scale:true,
+                    axisLabel: {
+                        formatter: '{value}',
+                        textStyle:{
+                          color:"#999999"
+                        },
+                        fontFamily: 'SourceHanSansCN-Normal',
+                        fontSize: '14px',
+                    },
+                    inverse:false
+                  },
+                ],
                 series: [{
                     data: label_counts,
-                    type: 'bar'
-                }]
+                    type: 'bar',
+                    name: "浮点数权重",
+                    xAxisIndex:0,
+                    YAxisIndex:0
+                },
+                {
+                  data: label_counts,
+                  type: 'bar',
+                  name: "定点数权重",
+                  xAxisIndex:1,
+                  yAxisIndex:1
+                }
+              ]
             };
             var weights_chart = echarts.init(document.getElementById("weight_dist_chart"));
             weights_chart.setOption(opt);
