add checker for src files and model

--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -315,14 +315,14 @@ line-height: 14px;">
 					警告
 				</h4>
 			</div>
-			<div class="modal-body">
+      <div class="modal-body">
         <div style="margin-top: 50px;">
-          <span id="error_detail" for="project_name_projrefac" style="font-family: SourceHanSansCN-Normal;
+          <div id="error_detail" for="project_name_projrefac" style="font-family: SourceHanSansCN-Normal;
           font-size: 22px;
           color: #f87307;
-          letter-spacing: 1.26px;margin: auto;text-align: center;width: 100%;display: inline-block;">错误信息</span>
+          letter-spacing: 1.26px;margin: auto;text-align: center;width: 100%;display: inline-block;height: 500px;width: 700px;overflow-y: auto;">错误信息</div>
         </div>
-			</div>
+      </div>
 			<div style="margin-top: 40px;margin-bottom: 40px;">
 				<button type="button" class="btn btn-primary" style="background-image: linear-gradient(180deg, #AFD1FF 0%, #77A4FF 100%);
         border-radius: 2px;
