--- a/src/resources/convertor_page_model_v2.html
+++ b/src/resources/convertor_page_model_v2.html
@@ -62,7 +62,7 @@
                   <td style="padding-left: 15px;border: solid 2px;border-color: #D6D6D6;font-family: SourceHanSansCN-Normal;
                   font-size: 14px;
                   color: #333333;
-                  text-align: left;padding-top: 8px; padding-bottom: 8px;">总层数</td>
+                  text-align: left;padding-top: 8px; padding-bottom: 8px;">层数</td>
                   <td id="model_total_layers" style="padding-left: 10px;font-family: SourceHanSansCN-Heavy;
                   font-size: 14px;
                   color: #4D4D4D;text-align: right;padding-right: 15px;padding-top: 8px; padding-bottom: 8px;"></td>
@@ -71,7 +71,7 @@
                   <td style="padding-left: 15px; border: solid 2px;border-color: #D6D6D6;font-family: SourceHanSansCN-Normal;
                   font-size: 14px;
                   color: #333333;
-                  text-align: left;padding-top: 8px; padding-bottom: 8px;">总参数量</td>
+                  text-align: left;padding-top: 8px; padding-bottom: 8px;">参数数量</td>
                   <td id="model_total_param" style="padding-left: 10px;font-family: SourceHanSansCN-Heavy;
                   font-size: 14px;
                   color: #4D4D4D;text-align: right;padding-right: 15px;padding-top: 8px; padding-bottom: 8px;"></td>
@@ -80,7 +80,7 @@
                   <td style="padding-left: 15px; border: solid 2px;border-color: #D6D6D6;font-family: SourceHanSansCN-Normal;
                   font-size: 14px;
                   color: #333333;
-                  text-align: left;padding-top: 8px; padding-bottom: 8px;">unit数量</td>
+                  text-align: left;padding-top: 8px; padding-bottom: 8px;">神经元数量</td>
                   <td id="model_total_units" style="padding-left: 10px;font-family: SourceHanSansCN-Heavy;
                   font-size: 14px;
                   color: #4D4D4D;text-align: right;padding-right: 15px;padding-top: 8px; padding-bottom: 8px;"></td>
@@ -100,27 +100,8 @@
               color: #333333;
               letter-spacing: 1.14px;">各层详细信息</div>
               <div class="row" style="width: 100%;">
-                <div class="col-md-6">
+                <div class="col-md-12" style="height: 400px;overflow-y: auto;">
                   <table id="model_detail_table" style="color: #333;">
-                    <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
-                    <thead>
-                      <tr style="border: solid 3px;height: 35px;border-color: #D6D6D6;">
-                        <td style="background: rgb(238,238,238);border: solid 2px;border-color: #D6D6D6;font-family: SourceHanSansCN-Regular;
-                        font-size: 16px;
-                        color: #666666;padding-top: 15px; padding-bottom: 15px;text-align: center;">名称</td>
-                        <td style="background: rgb(238,238,238);border: solid 2px;border-color: #D6D6D6;width: 180px;font-family: SourceHanSansCN-Regular;
-                        font-size: 16px;
-                        color: #666666;padding-top: 15px; padding-bottom: 15px;text-align: center;">输出形状</td>
-                        <td style="background: rgb(238,238,238);border: solid 2px;border-color: #D6D6D6;width: 200px;font-family: SourceHanSansCN-Regular;
-                        font-size: 16px;
-                        color: #666666;padding-top: 15px; padding-bottom: 15px;text-align: center;">参数量</td>
-                      </tr>
-                    </thead>
-                    <!--通过加载模型的信息动态创建-->
-                  </table>
-                </div>
-                <div class="col-md-6">
-                  <table id="model_detail_table_secondary" style="color: #333;">
                     <caption class="white-text" style="caption-side: top;text-align: center;"></caption>
                     <thead>
                       <tr style="border: solid 3px;height: 35px;border-color: #D6D6D6;">
@@ -149,18 +130,18 @@
               <div id="model_layers_vis_tab_caption" style="text-align: center;font-family: SourceHanSansCN-Normal;
               font-size: 20px;
               color: #333333;
-              letter-spacing: 1.14px;">卷积与激活层输出可视化</div>
+              letter-spacing: 1.14px;">卷积输出可视化</div>
               <!--动态创建-->
               <div id="layers_vis_div" class="row" style="width: 620px;margin-left: 40px;margin-top: 40px;margin-bottom: 0px; margin-right: 40px;padding: 0px;background: rgb(238,238,238);color: #333;border: 2px solid #333;height: 58px;border-color: #D6D6D6;">
                 <div class="col-md-3" style="border-right: 2px solid #333;height: 56px;border-color: #D6D6D6;font-family: SourceHanSansCN-Regular;
                 font-size: 16px;
                 color: #666666;text-align: center;vertical-align: middle;padding-top: 20px;">layer 名称</div>
-                <div class="col-md-3" style="border-right: 2px solid #333;height: 56px;border-color: #D6D6D6;font-family: SourceHanSansCN-Regular;
+                <!-- <div class="col-md-3" style="border-right: 2px solid #333;height: 56px;border-color: #D6D6D6;font-family: SourceHanSansCN-Regular;
                 font-size: 16px;
-                color: #666666;text-align: center;vertical-align: middle;padding-top: 20px;">layer 编号</div>
-                <div class="col-md-6" style="height: 56px;font-family: SourceHanSansCN-Regular;
+                color: #666666;text-align: center;vertical-align: middle;padding-top: 20px;">layer 编号</div> -->
+                <div class="col-md-9" style="height: 56px;font-family: SourceHanSansCN-Regular;
                 font-size: 16px;
-                color: #666666;text-align: center;vertical-align: middle;padding-top: 20px;">输出可视化</div>
+                color: #666666;text-align: center;vertical-align: middle;padding-top: 20px;">特征图</div>
               </div>
               <div id="tmp_peer"></div>
             </div>
@@ -292,7 +273,6 @@ body {
             console.log("units count:"+JSON.parse(data.model_general_info).total_params);
             // 模型总体信息
             var model_general_info = JSON.parse(data.model_general_info);
-            $("#model_total_layers").text(model_general_info.total_num_layers);
             $("#model_total_param").text(model_general_info.total_params);;
             $("#model_total_units").text(model_general_info.total_units);
           }else if(data.model_detail_info){
@@ -303,46 +283,25 @@ body {
             var layer_params_list = new Array();
             var total_params=0;
 
-            for(var i=0;i<detail_info.length/2;++i){
+            let total_layer_count = 0;
+            for (var i=0;i < detail_info.length;++i) {
+              if(detail_info[i].name === 'BatchNormalization' || detail_info[i].name === 'Activation' || detail_info[i].name === 'Dropout' || detail_info[i].name === 'InputLayer') {
+                continue;
+              }
+              ++total_layer_count;
+            }
+            $("#model_total_layers").text(total_layer_count);
+
+            for(var i=0;i<detail_info.length;++i){
                 var line = document.createElement("tr");
                 line.style.border = "solid 3px";
                 line.style.height = "45px";
                 line.style.borderColor ="#D6D6D6";
                 var col_name = document.createElement("td");
                 col_name.style = "padding-left: 15px;border: solid 2px;border-color: #D6D6D6;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 15px; padding-bottom: 15px;";
-                col_name.innerText = detail_info[i].name;
+                col_name.innerText = detail_info[i].name+"_"+(i+1);
                 var col_shape = document.createElement("td");
                 col_shape.style = "border: solid 2px;border-color: #D6D6D6;text-align: right; padding-right:15px;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 15px; padding-bottom: 15px;";
-                col_shape.innerText = '('+detail_info[i].shape+')';
-                var col_params = document.createElement("td");
-                col_params.style = "border: solid 2px;border-color: #D6D6D6;text-align: right; padding-right:15px;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 15px; padding-bottom: 15px;";
-                col_params.innerText = detail_info[i].params;
-                
-                if( parseInt(detail_info[i].params, 10) > 0){
-                  layer_uniq_names.push(detail_info[i].name+"_"+(i+1));
-                  layer_params_info.push({"name": detail_info[i].name+"_"+(i+1), "value": parseInt(detail_info[i].params, 10)});
-                  layer_params_list.push(parseInt(detail_info[i].params, 10));
-                  total_params += parseInt(detail_info[i].params, 10);
-                }
-
-                line.appendChild(col_name);
-                line.appendChild(col_shape);
-                line.appendChild(col_params);
-                table.appendChild(line);
-            }
-            // 另外一半数据使用副表
-            table = document.getElementById("model_detail_table_secondary");
-
-            for(var i=detail_info.length/2;i<detail_info.length;++i){
-                var line = document.createElement("tr");
-                line.style.border = "solid 3px";
-                line.style.height = "45px";
-                line.style.borderColor = "#D6D6D6";
-                var col_name = document.createElement("td");
-                col_name.style = "padding-left: 15px;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 15px; padding-bottom: 15px;";
-                col_name.innerText = detail_info[i].name;
-                var col_shape = document.createElement("td");
-                col_shape.style = "border: solid 2px;border-color: #D6D6D6;text-align:right; padding-right: 15px;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 15px; padding-bottom: 15px;";
                 col_shape.innerText = '('+detail_info[i].shape+')';
                 var col_params = document.createElement("td");
                 col_params.style = "border: solid 2px;border-color: #D6D6D6;text-align: right; padding-right:15px;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 15px; padding-bottom: 15px;";
@@ -380,15 +339,15 @@ body {
                 var layer_name_div = document.createElement("div");
                 layer_name_div.setAttribute("class", "col-md-3");
                 layer_name_div.style = "border-right: 2px solid #333;height: 58px;border-color: #D6D6D6;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 20px;";
-                layer_name_div.innerText = layer_name;
+                layer_name_div.innerText = layer_name+"_"+layer_idx;
                 img_div.appendChild(layer_name_div);
 
-                var layer_index_div = document.createElement("div");
-                layer_index_div.style = "border-right: 2px solid #333;height: 58px;border-color: #D6D6D6;text-align: right; padding-right: 15px;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 20px;";
-                layer_index_div.setAttribute("class", "col-md-3");
+                // var layer_index_div = document.createElement("div");
+                // layer_index_div.style = "border-right: 2px solid #333;height: 58px;border-color: #D6D6D6;text-align: right; padding-right: 15px;font-family: ArialMT;font-size: 12px;color: #333333;padding-top: 20px;";
+                // layer_index_div.setAttribute("class", "col-md-3");
 
-                layer_index_div.innerText = layer_idx;
-                img_div.append(layer_index_div);
+                // layer_index_div.innerText = layer_idx;
+                // img_div.append(layer_index_div);
 
                 var layer_vis_div = document.createElement("div");
                 layer_vis_div.setAttribute("class", "col-md-6");
@@ -401,7 +360,7 @@ body {
                   layer_img_tag.style.width = "50px";
                   layer_img_tag.style.height = "50px";
                   if(j === 0){
-                    layer_img_tag.style.marginLeft = "20px";
+                    layer_img_tag.style.marginLeft = "15%";
                   }
                   layer_vis_div.appendChild(layer_img_tag);
                   img_div.append(layer_img_tag);
@@ -426,7 +385,7 @@ body {
                   type: 'category',
                   data: layer_names,
                   scale:true,
-                  name:"神经层",
+                  name:"层",
                   nameTextStyle:{
                     color:"#999999",
                     fontFamily: 'PingFangSC-Regular',
@@ -445,7 +404,7 @@ body {
               {
                 type: 'value',
                   scale:true,
-                  name:"参数量(log_10)",
+                  name:"参数数量(10^n)",
                   nameTextStyle:{
                     color:"#999999",
                     fontFamily: 'PingFangSC-Regular',
@@ -480,7 +439,7 @@ body {
             ],
             series: [
                 {
-                    name: '参数量(log_10)',
+                    name: '参数量(10^n)',
                     type: 'bar',
                     data: layer_param_counts,
                     itemStyle: {
